gccida/g0/process_insert_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_insert_insn/src/gcse.c:5065:30: error: use of undeclared identifier 'machine_mode'
if ( general_operand( exp, ( machine_mode)*( ( unsigned __int8 *)reg + 2)) ) 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/process_insert_insn/src/obj/gcse.o] Error 1
